# genmq

./: .gitignore  README.md  genquiz-moodle.xml  genquiz.py  genquiz.xml  pyproject.toml  quiz.tex  quizvars.csv  setup.cfg
.github/workflows/: publish.yml
genquiz/: genquiz.py  quizvars.csv
src/: genmq.py  genquiz.py  quiz.tex  quiz.xml
