[metadata]
name = genmq
version = 0.3.0
description = Moodle quiz generator
url = https://github.com/ccaprani/genmq
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3.0
license_file = LICENSE
keyword = moodle, quiz, question bank
author = Colin Caprani
author_email = colin.caprani@monash.edu
classifiers =
    Development Status :: 4 - Beta
    Topic :: Education :: Computer Aided Instruction (CAI)  
    Environment :: Console
    Intended Audience :: Education
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls = 
    Documentation = https://ccaprani.github.io/genmq/
    Source =  https://github.com/ccaprani/genmq/
    Tracker = https://github.com/ccaprani/genmq/issues/

[options]
packages = find:
platforms = any
include_package_data = True
python_requires = >=3.8
setup_requires =
    setuptools
install_requires = 
    pandas
    jinja2

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
        genmq = src.genmq:cli

